# MLOps

./: .env  .env_template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  init.sql  k8s-cluster-config.yaml  pyproject.toml
assets/: mlops.excalidraw
charts/argo-workflows/: values.yaml
compose/: argilla.docker-compose.yaml  label-studio.docker-compose.yaml  langfuse.docker-compose.yaml  milvus.docker-compose.yaml  minio.docker-compose.yaml  mlflow.docker-compose.yaml  pg.docker-compose.yaml  prefect.docker-compose.yaml  qdrant.docker-compose.yaml
compose/pg/: init-db.sql
examples/qdrant/: 01-semantic-search.ipynb  02-measure-retrieval.ipynb  03-emotion.ipynb  semantic-search.ipynb
fastapi/: Dockerfile  README.md  logging.yml  requirements.txt
fastapi/src/: main.py
fastapi/src/api/: api.py
fastapi/src/api/endpoints/: iris.py
fastapi/src/api/schemas/: __init__.py  iris.py
grafana/: grafana_datasources.yml
mlflow/: Dockerfile  requirements.txt
pg/: init-db.sql
prefect/: Dockerfile  orion.yaml
prometheus/: prometheus.yml
