[tool.poetry]
name = "mlops"
version = "1.0.0"
description = ""
authors = ["yeungadrian <yeungadrian@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
qdrant-client = "^1.10.1"
ipykernel = "^6.29.5"
pre-commit = "^3.7.1"
mlflow = "^2.14.2"
fastembed = "^0.3.3"
datasets = "^2.20.0"
rich = "^13.7.1"

[tool.ruff]
line-length = 118
fix = true

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "W", # pycodestyle
  "I", # isort
]
